--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -47,6 +47,7 @@ import Container from "./Container.astro"
                     </div>
                 </div>
             </div>
+          </div>
 
     </Container>
 </div>
